--- a/less/style.less
+++ b/less/style.less
@@ -345,6 +345,10 @@ a.t5-cat-2nd{
   color: @gray;
   vertical-align: middle;
 }
+.list-unstyled li
+{
+  white-space:nowrap;
+}
 // Functional Icons
 
 .t5-functions{
